Adds a YAML schema for the new declaration language. Begins to implement the deserialization bindings and adds some unit tests.
Refs #111987